# gftp

./: .gitignore  CHANGELOG.md  CLAUDE.md  FIXES_SUMMARY.md  JHBUILD.md  MACOS.md  QUICK_START.md  README.AppBundle.md  TODO.txt  build_gftp_app.sh  configure.jhbuild  create_app_bundle.sh  create_dmg.sh  create_dmg_for_app.sh  meson.build
.github/: README.md
.github/workflows/: build.yml  ci.yml  jhbuild-deps.txt  macos-bundle.yml  release.yml
docs/: BUILDING-MACOS.md  CHANGES-2025-12-16.md  TESTING.md
lib/: gftp.h  misc.c
packaging/macos/: CHANGES.md  README.md  create-bundle.sh
packaging/macos/fontconfig/: 99-macos-rendering.conf
scripts/: validate_bundle.sh
src/gtk/: gftp-gtk.c  gtkui.c  platform_specific.c
